# sss-computing-strength

./: .gitignore  Cargo.toml  README.md  log.txt
.github/markdownlint/: markdownlint.yaml
.github/workflows/: coverage.sh  coverage.yaml  release_deb_package.yaml  test.yaml
design/: description.md  doc.md  doc1.md  schema.mmd  Алгоритм расчета.docx  Статище(3).docx  Статище.docx
design/algorithm/: DraftCriteria.md  shipType.md  zgAllow.md  zg_allow.md
src/: args.rs  bending_moment.rs  bound.rs  computer.rs  criterion.rs  displacement.rs  draught.rs  error.rs  frame.rs  icing.rs  icing_stab.rs  icing_timber.rs  load.rs  log.rs  main.rs  mass copy.rs  mass.rs  metacentric_height.rs  moment_mass.rs  rolling.rs  rolling_amplitude.rs  rolling_period.rs  shear_force.rs  stability.rs  stability_arm.rs  tank.rs  total_force.rs  trim.rs  vec_f64.rs  wetting_mass.rs  wind.rs
src/area/: h_stability.rs  h_strength.rs  mod.rs  vertical.rs
src/context/: calc_context.rs  calc_eval.rs  display_results.rs  display_src.rs  mod.rs  set_context.rs
src/data/: _parse_json.rs  api_server.rs  input.json  input.rs  input_api_server.rs  input_db.rs  input_loads.json  input_request.json  input_ship.json  mod.rs  parse_input.rs  serialize_out.rs
src/icing/: icing_area.rs  icing_mass.rs  icing_moment.rs  icing_stab.rs  mod.rs
src/load/: bulk copy.rs  bulk.rs  desk copy.rs  desk.rs  mass copy.rs  mass.rs  mod copy.rs  mod.rs  space copy.rs  space.rs  tank.rs
src/math/: area.rs  bound.rs  bounds.rs  curve.rs  curve2d.rs  delta_m_h.rs  inertia_shift.rs  mass_moment.rs  mod.rs  moment.rs  pos_shift.rs  position.rs  surface_moment.rs  vec.rs
src/stability/: acceleration.rs  acceleration_computer.rs  area.rs  area_dmin.rs  circulation.rs  criterion copy.rs  criterion.rs  criterion_computer.rs  draft_mark.rs  grain.rs  grain_computer.rs  icing.rs  lever_diagram.rs  load_line.rs  metacentric_height.rs  mod.rs  moment.rs  parameters.rs  rolling_amplitude.rs  rolling_period.rs  screw.rs  stab.rs  stab_computer.rs  stability_arm.rs  trim.rs  wetting.rs  wind.rs  windage.rs
src/strength/: area.rs  bending_moment.rs  computer.rs  displacement.rs  draught.rs  frame.rs  icing.rs  load.rs  mass.rs  mod.rs  results.rs  shear_force.rs  total_force.rs  trim.rs  volume.rs  (+1 more)
(+304 files in other folders)
