[package]
name = "sss-computing-strength"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
futures = "0.3.30"

testing = { git = "https://github.com/a-givertzman/rust-testing.git", tag = "0.1.1" }
debugging = { git = "https://github.com/a-givertzman/rust-debuging.git", tag = "0.0.1" }
api-tools = { git = "https://github.com/a-givertzman/rust-api-tools.git", tag = "0.0.6" }

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
splines = "4.3.1"
thiserror = "1.0.57"
log2 = "0.1.11"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

